<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toTopOf="@id/introBottom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:textSize="35sp"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:text="@string/please_login_to_continue" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:text="@string/don_t_have_an_account_sign_up" />


    </LinearLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:id="@+id/introBottom"
        android:src="@drawable/wave"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/app_name" />


</androidx.constraintlayout.widget.ConstraintLayout>