<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginIntro"
    android:background="@color/bg_color">

    <TextView
        android:id="@+id/introHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aptibit"
        android:textStyle="bold"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="40sp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/introText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_aptitude_ready"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:id="@+id/introImg"
        android:src="@drawable/login"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/introHeading"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background"
        android:text="@string/Begin"
        android:fontFamily="@font/ubuntu_medium"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/introText"
        app:layout_constraintStart_toStartOf="@+id/introText"
        app:layout_constraintTop_toBottomOf="@id/introText" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:id="@+id/introBottom"
        android:src="@drawable/wave"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>